updated to gradle instead of maven