@@ -1,7 +1,6 @@
 package no.skatteetaten.aurora;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
@@ -15,14 +14,14 @@ import io.micrometer.core.instrument.Timer;
 @Component
 public class AuroraMetrics {
 
-    private MeterRegistry registry;
+    private final MeterRegistry registry;
 
     public AuroraMetrics(MeterRegistry registry) {
         this.registry = registry;
     }
 
     public <T> T withMetrics(String name, Supplier<T> s) {
-        return withMetricsInternal("operations", Arrays.asList(Tag.of("name", name)), s);
+        return withMetricsInternal("operations", List.of(Tag.of("name", name)), s);
     }
 
     public <T> T withMetrics(String name, List<Tag> inputTags, Supplier<T> s) {
@@ -54,7 +53,7 @@ public class AuroraMetrics {
     }
 
     public void status(String name, StatusValue value) {
-        statusInternal("", value, Arrays.asList(Tag.of("name", name)));
+        statusInternal("", value, List.of(Tag.of("name", name)));
     }
 
     public void status(String name, StatusValue value, List<Tag> inputTags) {
@@ -63,8 +62,7 @@ public class AuroraMetrics {
 
     private void statusInternal(String name, StatusValue value, List<Tag> inputTags) {
 
-        List<Tag> tags = new ArrayList<>();
-        tags.addAll(inputTags);
+        List<Tag> tags = new ArrayList<>(inputTags);
 
         registry.gauge("last_status" + name, tags, value.getValue());
         tags.add(Tag.of("status", value.name()));
@@ -78,7 +76,7 @@ public class AuroraMetrics {
         CRITICAL(2),
         UNKNOWN(3);
 
-        private int value;
+        private final int value;
 
         StatusValue(int value) {
             this.value = value;
